fix headings alignment

--- a/styles.css
+++ b/styles.css
@@ -170,6 +170,10 @@ a, a:hover, a:active, a:visited, a:focus {
 }
 
 /* ----------- FEATURE CATEGORY ----------- */
+h3, h4 {
+    text-align: center; 
+}
+
 .feature-wrapper {
     margin: 20px 30px;
 }
